--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     align-items: center;
     color: white;
     font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
