--- a/mainstyle.css
+++ b/mainstyle.css
@@ -51,7 +51,7 @@ img {
     position: absolute;
     bottom: 0;
     width: 250px;
-    animation: float 3s ease-in-out infinite;
+    transform: scale(1.3); /* 확대 비율 */
 }
 
 @keyframes float {
