--- a/mainstyle.css
+++ b/mainstyle.css
@@ -47,11 +47,15 @@ body {
     background-color: #ff6c91;
 }
 
-img {
+/* 1 수정됨 */
+img {  
     position: absolute;
-    bottom: 0;
-    width: 250px;
-    transform: scale(1.3); /* 확대 비율 */
+    left: 50%;
+    top: 50%;
+    transform: translate(-60%, -65%) scale(3.5); /* 중앙보다 살짝 왼쪽, 확대 */
+    z-index: 1;
+    pointer-events: none; /* 클릭 방지 */
+    opacity: 0.9;
 }
 
 @keyframes float {
