--- a/mainstyle.css
+++ b/mainstyle.css
@@ -51,6 +51,7 @@ body {
 img {  
     position: absolute;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%) scale(3.5); /* 중앙 정렬 + 확대 */
     z-index: 1;
     pointer-events: none;
