--- a/mainstyle.css
+++ b/mainstyle.css
@@ -86,8 +86,8 @@ body {
 }
 
 /* script 변수 적용(vh) */
-img {
-  height: calc(var(--vh, 1vh) * 50);
+body {
+  height: calc(var(--vh, 1vh) * 100);
   /* 나머지 스타일 유지 */
 }
 
